--- a/index.html
+++ b/index.html
@@ -57,49 +57,26 @@
         </div>
       </nav>
     </header>
-      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="/images/assistant.webp" class="d-block w-100" alt="guitare">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/Aviateur.webp" class="d-block w-100" alt="Aviateur">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/cameraman1.webp" class="d-block w-100" alt="cameraman1">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/dino.jpg" class="d-block w-100" alt="Dinosaure en verre de Nicolas Laty">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/four rechauffe.jpg" class="d-block w-100" alt="four de rechauffe">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/Nico interview.jpg" class="d-block w-100" alt="four de rechauffe">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/sulfure.jpg" class="d-block w-100" alt="four de rechauffe">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/prise de son.jpg" class="d-block w-100" alt="four de rechauffe">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/danse groupe.png" class="d-block w-100" alt="danse groupe">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/dessinateur.png" class="d-block w-100" alt="Adrien">
-          </div>
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/images/Anastasia enlumineuse.JPG" class="img-fluid d-block w-100" alt="Anastasia enlumineuse">
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+        <div class="carousel-item">
+          <img src="/images/anastasia bureau1.JPG" class="img-fluid d-block w-100" alt="Anastasia 2">
+        </div>
+        <div class="carousel-item">
+          <img src="/images/dino.jpg" class="img-fluid d-block w-100" alt="dinosaure en verre">
+        </div>
       </div>
-
-
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 </body>
 </html>
