--- a/backstage.html
+++ b/backstage.html
@@ -47,7 +47,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/backstage.html">Backstage</a>
+                <a class="nav-link" href="#">Backstage</a>
               </li>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -56,36 +56,43 @@
           </div>
         </div>
       </nav>
-    </header>
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="/images/enluminures/Anastasia enlumineuse.JPG" class="img-fluid d-block w-100" alt="Anastasia enlumineuse">
+
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="/images/" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Tournage à la verrerie Pierrini</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
         </div>
-        <div class="carousel-item">
-          <img src="/images/enluminures/Anastasia1.JPG" class="img-fluid d-block w-100" alt="Anastasia 1">
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a short card.</p>
+            </div>
+          </div>
         </div>
-        <div class="carousel-item">
-          <img src="/images/verrerie/dino.jpg" class="img-fluid d-block w-100" alt="dinosaure en verre">
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
         </div>
-        <div class="carousel-item">
-          <img src="/images/verrerie/Nico interview.jpg" class="img-fluid d-block w-100" alt="Nicolas Laty interview">
-        </div>
-        <div class="carousel-item">
-          <img src="/images/verrerie/public.jpg" class="img-fluid d-block w-100" alt="équipe tournage">
-        </div>
-        <div class="carousel-item">
-          <img src="/images/verrerie/sulfure.jpg" class="img-fluid d-block w-100" alt="sulfure">
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-</body>
-</html>
+    </header>
