--- a/backstage.html
+++ b/backstage.html
@@ -60,37 +60,55 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
-            <img src="/images/" class="card-img-top" alt="...">
+            <img src="/images/verrerie/four rechauffe.webp" class="card-img-top" alt="four de rechauffe">
             <div class="card-body">
-              <h5 class="card-title">Tournage à la verrerie Pierrini</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Tournage à la verrerie Pierrini 12.23</h5>
+              <p class="card-text">Four de réchauffe à 1200 degrés</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/verrerie/sulfure.webp" class="card-img-top" alt="saupoudrage de sulfure">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a short card.</p>
+              <h5 class="card-title">Tournage à la verrerie Pierrini 12.23</h5>
+              <p class="card-text">saupoudrage de sulfure</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="/images/verrerie/emerveillement.webp" class="card-img-top" alt="caméraman">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Tournage à la verrerie Pierrini 12.23</h5>
+              <p class="card-text">Camérawoman émerveillée </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="/images/verrerie/cameraman2.webp" class="card-img-top" alt="caméraman">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Tournage à la verrerie Pierrini 12.23</h5>
+              <p class="card-text">Caméraman 1 </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="/images/verrerie/cameraman3.webp" class="card-img-top" alt="caméraman">
+            <div class="card-body">
+              <h5 class="card-title">Tournage à la verrerie Pierrini 12.23</h5>
+              <p class="card-text">Caméraman 2</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="/images/verrerie/cameraman1.webp" class="card-img-top" alt="caméraman">
+            <div class="card-body">
+              <h5 class="card-title">Tournage à la verrerie Pierrini 12.23</h5>
+              <p class="card-text">Caméraman 3</p>
             </div>
           </div>
         </div>
