ajout des pages videos et backstage

--- a/backstage.html
+++ b/backstage.html
@@ -23,10 +23,13 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/videos.html">Videos</a>
+              </li>
               
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Videos
+                  Liens Youtube
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=sR2xb41AoyU" target="_blank">Musicien</a></li>
@@ -34,7 +37,7 @@
                   <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=bzZidXQfnVY">Danseur </a></li>
                   <li><a class="dropdown-item" href="#">Dessinateur</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#"></a></li>
+                  <li><a class="dropdown-item" href="/videos.html">Toutes les vidéos</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -81,7 +84,7 @@
             <img src="/images/verrerie/emerveillement.webp" class="card-img-top" alt="caméraman">
             <div class="card-body">
               <h5 class="card-title">Tournage à la verrerie Pierrini 12.23</h5>
-              <p class="card-text">Camérawoman émerveillée </p>
+              <p class="card-text">Emerveillement </p>
             </div>
           </div>
         </div>
@@ -109,6 +112,78 @@
             <div class="card-body">
               <h5 class="card-title">Tournage à la verrerie Pierrini 12.23</h5>
               <p class="card-text">Caméraman 3</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="/images/verrerie/dino.webp" class="card-img-top" alt="Bébé dinosaure sortant de l'oeuf">
+            <div class="card-body">
+              <h5 class="card-title">Tournage à la verrerie Pierrini 12.23</h5>
+              <p class="card-text">Dinosaure en verre sortant de l'oeuf </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="/images/verrerie/Manon dino.webp" class="card-img-top" alt="Manon">
+            <div class="card-body">
+              <h5 class="card-title">Tournage à la verrerie Pierrini 12.23</h5>
+              <p class="card-text">Manon  </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="/images/verrerie/Nico.webp" class="card-img-top" alt=" Nicolas Laty">
+            <div class="card-body">
+              <h5 class="card-title">Tournage à la verrerie Pierrini 12.23</h5>
+              <p class="card-text">Nicolas Laty </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="/images/verrerie/meduse.webp" class="card-img-top" alt="Meduse">
+            <div class="card-body">
+              <h5 class="card-title">Tournage à la verrerie Pierrini 12.23</h5>
+              <p class="card-text">Méduse </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="/images/verrerie/prise de son.webp" class="card-img-top" alt="Prise de son">
+            <div class="card-body">
+              <h5 class="card-title">Tournage à la verrerie Pierrini 12.23</h5>
+              <p class="card-text">Prise de son</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="/images/verrerie/PUBLIC4.webp" class="card-img-top" alt="public">
+            <div class="card-body">
+              <h5 class="card-title">Tournage à la verrerie Pierrini 12.23</h5>
+              <p class="card-text">Publique </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="/images/enluminures/anastasia bureau 2.JPG" class="card-img-top" alt="anastasia bureau1">
+            <div class="card-body">
+              <h5 class="card-title">Tournage dans un atelier d'enluminure</h5>
+              <p class="card-text">Anastasia bureau </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="/images/enluminures/enluminure.JPG" class="card-img-top" alt="enluminure">
+            <div class="card-body">
+              <h5 class="card-title">Tournage dans un atelier d'enluminure</h5>
+              <p class="card-text">enluminure </p>
             </div>
           </div>
         </div>
