--- a/videos.html
+++ b/videos.html
@@ -36,7 +36,7 @@
                   <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=bzZidXQfnVY">Danseur </a></li>
                   <li><a class="dropdown-item" href="#">Dessinateur</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#"></a></li>
+                  <li><a class="dropdown-item" href="#">Toutes les vidéos</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -58,36 +58,14 @@
           </div>
         </div>
       </nav>
-    </header>
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item">
-          <img src="/images/verrerie/Nico interview.webp" class="img-fluid d-block w-100" alt="Nicolas Laty interview">
-        </div>
-        <div class="carousel-item active">
-          <img src="/images/enluminures/Anastasia enlumineuse.JPG" class="img-fluid d-block w-100" alt="Anastasia enlumineuse">
-        </div>
-        <div class="carousel-item">
-          <img src="/images/danseuse/danse groupe.png" class="img-fluid d-block w-100" alt="Anastasia 1">
-        </div>
-        <div class="carousel-item">
-          <img src="/images/verrerie/dino.webp" class="img-fluid d-block w-100" alt="dinosaure en verre">
-        </div>
-        <div class="carousel-item">
-          <img src="/images/dessinateur/dessinateur.png" class="img-fluid d-block w-100" alt="équipe tournage">
-        </div>
-        <div class="carousel-item">
-          <img src="/images/musicien/Art and clap 2.png" class="img-fluid d-block w-100" alt="sulfure">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-</body>
-</html>
+      </header>
+
+      <body>
+        <main>
+            <div>
+                <h2>Videos 2023</h2>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/vwm_GMmO1_Q?si=yKGF-ORq_vETJ1Bh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bzZidXQfnVY?si=DDoB19eGvxIRFIVe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </main>
+      </body>
