--- a/backstage.html
+++ b/backstage.html
@@ -187,5 +187,32 @@
             </div>
           </div>
         </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="/images/enluminures/Anastasia3.JPG" class="card-img-top" alt="Anastasia3">
+            <div class="card-body">
+              <h5 class="card-title">Tournage dans un atelier d'enluminure</h5>
+              <p class="card-text">Anastasia </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="/images/enluminures/panneau accueil.JPG" class="card-img-top" alt="panneau accueil">
+            <div class="card-body">
+              <h5 class="card-title">Tournage dans un atelier d'enluminure</h5>
+              <p class="card-text">Panneau d'accueil </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="/images/enluminures/equipe tournage2.JPG" class="card-img-top" alt="equipe tournage">
+            <div class="card-body">
+              <h5 class="card-title">Tournage dans un atelier d'enluminure</h5>
+              <p class="card-text">Equipe de tournage </p>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
