amélioration du carroussel ajout de la partie articles

--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Art n' Clap </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="/style.css"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+     <link href="/style.css" rel="stylesheet" />
+
   </head>
   <body>
-    <h1>Art n' Clap</h1>
-    <img src="" class="d-block w-100" alt="" id="Logo">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <div class="bandeau container-fluid ">
+      <a class="navbar-brand" href="#">
+        <h1>Art N Clap  <img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_200,h_200/v1705479045/gbzuenztanzhjdvbi4gp.png" class="me-2" height="100"
+          alt="Art N Clap Logo rouge" loading="lazy" /><img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_100,h_100/v1705490269/yzyponts7wrkfguskvgq.png" class="me-2" height="100"
+          alt="Art N Clap Logo violet" loading="lazy" /><img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_100,h_100/v1705490269/co691qw9xfjpetd06yzd.png" class="me-2" height="100"
+          alt="Art N Clap Logo vert" loading="lazy" /><img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_100,h_100/v1705490270/wvrrdcx3ljw90ryztpvk.png" class="me-2" height="100"
+          alt="Art N Clap Logo jaune" loading="lazy" />
+        </h1>
+      </a>
+    </div>
  <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -39,45 +48,34 @@
                   <li><a class="dropdown-item" href="#"></a></li>
                 </ul>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Articles
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=sR2xb41AoyU" target="_blank">Musicien</a></li>
-            
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/articles.html">Articles</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/backstage.html">Backstage</a>
               </li>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            
           </div>
         </div>
       </nav>
     </header>
+
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item">
-          <img src="/images/verrerie/Nico interview.webp" class="img-fluid d-block w-100" alt="Nicolas Laty interview">
+          <img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_1300,h_500/v1705487299/j363n5fbldftzsmca7al.webp" class="img-fluid d-block w-100" alt="Nicolas Laty interview">
         </div>
         <div class="carousel-item active">
-          <img src="/images/enluminures/Anastasia enlumineuse.JPG" class="img-fluid d-block w-100" alt="Anastasia enlumineuse">
+          <img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_1300,h_500/v1704275645/orbztpcj4tksbkwzgiez.jpg" class="img-fluid d-block w-100" alt="Anastasia enlumineuse">
         </div>
         <div class="carousel-item">
-          <img src="/images/danseuse/danse groupe.png" class="img-fluid d-block w-100" alt="Anastasia 1">
+          <img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_1300,h_500/v1705487822/awanmctfurwtudghjagd.png" class="img-fluid d-block w-100" alt="danse groupe enfants">
         </div>
         <div class="carousel-item">
-          <img src="/images/verrerie/dino.webp" class="img-fluid d-block w-100" alt="dinosaure en verre">
+          <img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_1300,h_500/v1705487475/n41z6cyt73hn0d8kuvji.png" class="img-fluid d-block w-100" alt="dessinateur">
         </div>
         <div class="carousel-item">
-          <img src="/images/dessinateur/dessinateur.png" class="img-fluid d-block w-100" alt="équipe tournage">
-        </div>
-        <div class="carousel-item">
-          <img src="/images/musicien/Art and clap 2.png" class="img-fluid d-block w-100" alt="sulfure">
+          <img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_1300,h_500/v1705487617/u9ug6em7c5gsfwfujwki.png" class="img-fluid d-block w-100" alt="musicien">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -88,6 +86,53 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
+    </div>
+
+    <div class="col-md-12">  
+      <h2 class="mb-4">Art N Clap c'est quoi? </h2>
+      <p>Art n' Clap est une mini-série documentaire qui porte sur les métiers artistiques et techniques. Pour chaque épisodes, un nouveau métier est présenté sur une durée moyenne de sept minutes. Art N Clap est né au sein d'un projet étudiant dans le campus Ynov qui regroupe différentes fillières comme l'informatique, l'audiovisuel, la création et Design ou encore le marketing et la communication.   </p>
+      <h2>Quel est l'objectif?</h2>
+      <p>Notre série vise à être à la fois divertissante et pédagogique. Notre souhait est de transmettre la passion des professionnels en partageant leur quotidien avec des épisodes variés, qui peuvent être cinématiques ou plus classiques. Ceux-ci visent également à renseigner le spectateur sur un métier donné pour qu'il puisse pousser ses recherches s'il souhaite, lui aussi, exercer ce métier.</p>
+
+      <h2 class="mb-4">Articles récents</h2>
+      <div class=" articles">
+        <!-- Article 1 -->
+        <div class="col-md-4">
+          <div class="card">
+            <img src="https://res.cloudinary.com/dpcysdzoq/image/upload/w_1000,ar_1:1,c_fill,g_auto,e_art:hokusai/v1704215768/ordqpv2cewkwhaxcjli0.png" class="card-img-top" alt="Article scénariste">
+            <div class="card-body">
+              <h5 class="card-title">Article Scénariste</h5>
+              <p class="card-text">Découvrez le métier de scénariste.</p>
+              <a href="/articles.html" class="btn btn-primary">Lire plus</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_498,h_498/v1705483787/sb2cvqjhdhzav0cmuy6y.webp" class="card-img-top" alt="Article verrier">
+            <div class="card-body">
+              <h5 class="card-title">Article verrier</h5>
+              <p class="card-text">Découvre le métier de verrier.</p>
+              <a href="/articles.html" class="btn btn-primary">Lire plus</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card">
+            <img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_510,h_510/v1705489113/mo0nf9waqkhsxepkrzjv.jpg" class="card-img-top" alt="Article verrier">
+            <div class="card-body">
+              <h5 class="card-title">Article enlumineur</h5>
+              <p class="card-text">Découvre le métier d'enlumineur.</p>
+              <a href="/articles.html" class="btn btn-primary">Lire plus</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
     </div>
 </body>
 </html>
