--- a/videos.html
+++ b/videos.html
@@ -20,7 +20,7 @@
       </a>
     </div>
  <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +29,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                <a class="nav-link " aria-current="page" href="/index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/videos.html">Videos</a>
@@ -48,7 +48,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/articles.html">Articles</a>
+                <a class="nav-link " aria-current="page" href="/articles.html">Articles</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/backstage.html">Backstage</a>
@@ -67,7 +67,6 @@
             </div>
             <div>
                 <h3>Teaser Videos 2024</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/HhX9WUqHnHE?si=G6rwTlTVOQF81yTt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/KJrJt5OlnlM?si=_yWprhW8gVjv1zkN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            </div>
         </main>
       </body>
