--- a/backstage.html
+++ b/backstage.html
@@ -20,7 +20,7 @@
       </a>
     </div>
  <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary"data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,10 +29,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                <a class="nav-link " aria-current="page" href="/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/videos.html">Videos</a>
+                <a class="nav-link " aria-current="page" href="/videos.html">Videos</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -48,10 +48,10 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/articles.html">Articles</a>
+                <a class="nav-link " aria-current="page" href="/articles.html">Articles</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/backstage.html">Backstage</a>
+                <a class="nav-link active" href="/backstage.html">Backstage</a>
               </li>
             
           </div>
