--- a/videos.html
+++ b/videos.html
@@ -40,7 +40,6 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=sR2xb41AoyU" target="_blank">Musicien</a></li>
-                  <li><a class="dropdown-item" href="#">metteur en scène </a></li>
                   <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=bzZidXQfnVY">Danseur </a></li>
                   <li><a class="dropdown-item" href="#">Dessinateur</a></li>
                   <li><hr class="dropdown-divider"></li>
@@ -64,9 +63,11 @@
                 <h3>Videos 2023</h3>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/vwm_GMmO1_Q?si=yKGF-ORq_vETJ1Bh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/bzZidXQfnVY?si=DDoB19eGvxIRFIVe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/sR2xb41AoyU?si=dYvrXOSO9mEyZfzr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div>
                 <h3>Teaser Videos 2024</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/KJrJt5OlnlM?si=_yWprhW8gVjv1zkN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/KJrJt5OlnlM?si=_yWprhW8gVjv1zkN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>   
+               </div>
         </main>
       </body>
