--- a/videos.html
+++ b/videos.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <h1>Art N Clap  <img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_200,h_200/v1705479045/gbzuenztanzhjdvbi4gp.png" class="me-2" height="100"
+        <h1>Art N' Clap  <img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_200,h_200/v1705479045/gbzuenztanzhjdvbi4gp.png" class="me-2" height="100"
           alt="Art N Clap Logo rouge" loading="lazy" /><img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_100,h_100/v1705490269/yzyponts7wrkfguskvgq.png" class="me-2" height="100"
           alt="Art N Clap Logo violet" loading="lazy" /><img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_100,h_100/v1705490269/co691qw9xfjpetd06yzd.png" class="me-2" height="100"
           alt="Art N Clap Logo vert" loading="lazy" /><img src="https://res.cloudinary.com/dpcysdzoq/image/upload/c_fill,w_100,h_100/v1705490270/wvrrdcx3ljw90ryztpvk.png" class="me-2" height="100"
